# raylib-vapi

./: .gitignore  meson.build
src/examples/: meson.build  template.vala
src/examples/core/: core_2d_camera.vala  core_basic_screen_manager.vala  core_basic_window.vala
src/examples/meta/: license.vala  version.vala
src/examples/misc/: draw_line.vala
src/lib/: 2DCamera.vala  Clipboard.vala  Color.vala  Constants.vala  Window.vala  meson.build
src/lib/Audio/: Music.vala  Sound.vala
src/lib/Input/: Gamepad.vala
src/lib/Shapes/: Line.vala  Rectangle.vala
src/utils/: bin2vala.vala
subprojects/raylib/: meson.build
vapi/: raylib.vapi
