# Examples
if get_option('examples') == true
	executable(
		'core_basic_window',
		dependencies: [raylib_oop_dep],
		sources: [
			'core/core_basic_window.vala',
			'meta/license.vala',
			'meta/version.vala',
		],
	)
	executable(
		'core_basic_screen_manager',
		dependencies: [raylib_oop_dep],
		sources: [
			'core/core_basic_screen_manager.vala',
			'meta/license.vala',
			'meta/version.vala',
		],
	)
	executable(
		'template',
		dependencies: [raylib_oop_dep],
		sources: [
			'template.vala',
		],
	)
	executable(
		'draw_line',
		dependencies: [raylib_oop_dep],
		sources: [
			'misc/draw_line.vala',
		],
	)
	executable(
		'core_2d_camera',
		dependencies: [raylib_oop_dep],
		sources: [
			'core/core_2d_camera.vala',
			'meta/license.vala',
			'meta/version.vala',
		],
	)
endif
